<resources>
    <string name="app_name">Tables</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="customer">Customer</string>
    <string name="restaurant">Restaurant</string>
    <string name="error_username_required">Must enter a user name</string>
    <string name="error_password_required">Must enter a password</string>
    <string name="error_user_type_required">Must select type of user</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="confirm">Confirm</string>
    <string name="fill_your_details">Fill your details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title_activity_navigation_bar">NavigationBarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="email">Email</string>
    <string name="restaurant_logo">Restaurant Logo</string>
    <string name="show_on_map">Show On Map</string>
    <string name="call_place">Call Place</string>
    <string name="searchbar_hint">EveryFood EveryWhere</string>
    <string name="search_restaurants">Search restaurants</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="show_location">Show Location</string>
    <string name="make_reservation">Make Reservation</string>
    <string name="place_name">Place Name</string>
    <string name="address">Address</string>
    <string name="select_date">Select Date</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="loading">Loading</string>
    <string name="your_reservations">Your reservations</string>
    <string name="log_out">Log out</string>
    <string name="enter_your_details">Enter your details</string>
</resources>