<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/colorNeutral"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textColorHint="@color/textColorDark"
            android:textColor="@color/black"
            android:autofillHints="name"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textColorHint="@color/textColorDark"
            android:textColor="@color/black"
            android:autofillHints="name"
            android:inputType="textPersonName" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/textColorLight"
            app:backgroundTint="@color/colorPrimary" />

    </LinearLayout>

</RelativeLayout>